--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <section class="top-section">
       <h1 class="title"><span class="title-idea">idea</span><span class="title-box">box</span></h1>
       <section class="form-section">
-        <input class="text-input form-item title-field" type="text" name="Title" placeholder="Title">
-        <textarea class="text-input form-item body-field" type="text" name="Body" placeholder="Body"></textarea>
-        <input class="text-input form-item tag-field" type="text" name="Tags" placeholder="Tags">
-        <p class="form-item error-msg">Input field(s) are blank!</p>
-        <button class="save-button form-item" type="button" name="save-button" disabled>save</button>
+        <input class="text-input form-item title-field title-input" type="text" name="Title" placeholder="Title">
+        <textarea class="text-input form-item body-field body-input" type="text" name="Body" placeholder="Body"></textarea>
+        <!-- <input class="text-input form-item tag-field" type="text" name="Tags" placeholder="Tags"> -->
+        <!-- <p class="form-item error-msg">Input field(s) are blank!</p> -->
+        <button class="save-button form-item" type="button" name="save-button">save</button>
       </section>
     </section>
 
-    <section class="bottom-section">
+    <!-- <section class="bottom-section">
       <section class="search-sort-tags">
       <input class="text-input search-bar" type="text" name="Search" value="" placeholder="Search">
       <i class="fa fa-sort-desc fa-3x" aria-hidden="true"></i>
       <ul class="tag-bar"></ul>
       <button class="show-all-button form-item" type="button" name="show-all-button">Show All</button>
-      </section>
-      <section class="idea-list"></section>
-    </section>
+      </section> -->
+      <section class="render-idea"></section>
+    <!-- </section> -->
 
-    <script src="https://use.fontawesome.com/ba46352d53.js"></script>
+    <!-- <script src="https://use.fontawesome.com/ba46352d53.js"></script> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- <script> window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>') </script> -->
-    <script type="text/javascript" src="idea-box2.js"></script>
+    <script type="text/javascript" src="index-box3.js"></script>
   </body>
 </html>
