Renamed js files

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <!-- <script src="https://use.fontawesome.com/ba46352d53.js"></script> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- <script> window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>') </script> -->
-    <script type="text/javascript" src="index-box3.js"></script>
+    <script type="text/javascript" src="idea-box3.js"></script>
   </body>
 </html>
