--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
         <button class="save-button form-item" type="button" name="save-button">save</button>
       </section>
     </section>
+    <section clas="bottom-section">
 
-    <!-- <section class="bottom-section">
-      <section class="search-sort-tags">
+      <input class="text-input search-bar" type="text" name="Search" value="" placeholder="Search">
+
+      <!-- <section class="search-sort-tags">
       <input class="text-input search-bar" type="text" name="Search" value="" placeholder="Search">
       <i class="fa fa-sort-desc fa-3x" aria-hidden="true"></i>
       <ul class="tag-bar"></ul>
-      <button class="show-all-button form-item" type="button" name="show-all-button">Show All</button>
-      </section> -->
+      <button class="show-all-button form-item" type="button" name="show-all-button">Show All</button> -->
+
+    </section>
       <section class="render-idea"></section>
-    <!-- </section> -->
 
     <!-- <script src="https://use.fontawesome.com/ba46352d53.js"></script> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
